# rusty-cannon

./: Dockerfile  Makefile  README.md
arbitrary/arbitrary-prepare-mock/: Cargo.toml
arbitrary/arbitrary-prepare-mock/src/: main.rs
arbitrary/arbitrary-prover-main/: Cargo.toml
arbitrary/arbitrary-prover-main/src/: iommu.rs  main.rs
arbitrary/arbitrary-state-machine/: Cargo.toml
arbitrary/arbitrary-state-machine/src/: lib.rs  primitives.rs  state.rs
arbitrary/ethereum-bigint/: .cargo-checksum.json  Cargo.toml
arbitrary/ethereum-hexutil/: .cargo-checksum.json  Cargo.toml
arbitrary/ethereum-hexutil/src/: lib.rs
arbitrary/ethereum-rlp/: .cargo-checksum.json  Cargo.toml
arbitrary/ethereum-rlp/src/: compression.rs  impls.rs  lib.rs  rlpin.rs  stream.rs  traits.rs  untrusted_rlp.rs
arbitrary/ethereum-trie/: .cargo-checksum.json  Cargo.toml
arbitrary/ethereum-trie/src/: lib.rs
arbitrary/ethereum-trie/src/merkle/: nibble.rs  node.rs
arbitrary/ethereum-trie/src/ops/: build.rs  delete.rs
contracts/: Challenge.sol
demo/: challenge_fault.sh  challenge_simple.sh
hello-world/: Cargo.toml  build.rs  target.json
hello-world/.cargo/: config
hello-world/src/: asm.S  heap.rs  iommu.rs  main.rs
mipigo/: build.sh  compile.py
mipsevm/: main.go  mips_evm_test.go  run_unicorn.go
scripts/: challenge.js  lib.js  preload.js
