[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "*"

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
