[package]
name = "arbitrary-state-machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-trie = { path = "../ethereum-trie" }
ethereum-bigint = { path = "../ethereum-bigint" }
ethereum-rlp = { path = "../ethereum-rlp" }
sha3 = { version = "*", default-features = false }

[features]
default = ["std"]
std = []
